--- a/Tarea 1/cars.ipynb
+++ b/Tarea 1/cars.ipynb
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 76,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "import scipy as stats"
+    "from scipy import stats"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-08-22T02:58:10.487809800Z",
-     "start_time": "2023-08-22T02:58:08.701694100Z"
+     "end_time": "2023-08-22T05:08:45.951978500Z",
+     "start_time": "2023-08-22T05:08:40.556773700Z"
     }
    },
    "id": "bcef01be66736b56"
@@ -25586,52 +25586,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 79,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invoice is not normal\n",
+      "Enginesize is not normal\n",
+      "Cylinders is normal\n",
+      "Horsepower is not normal\n",
+      "MPG_City is not normal\n",
+      "MPG_Highway is not normal\n",
+      "Weight is not normal\n",
+      "Wheelbase is not normal\n",
+      "Length is normal\n"
+     ]
+    }
+   ],
    "source": [
-    "p_invoice = stats.normaltest(df[[\"Invoice\"]].query(\"Invoice <= 80000\")[\"Invoice\"].values)\n",
+    "k26,p_invoice = stats.normaltest(df[[\"Invoice\"]].query(\"Invoice <= 80000\")[\"Invoice\"].values)\n",
     "alpha = 1e-3\n",
-    "if p < alpha:\n",
-    "    print(\"Invoice is not nomal\")\n",
+    "if p_invoice < alpha:\n",
+    "    print(\"Invoice is not normal\")\n",
     "else:\n",
     "    print(\"Invoice is normal\")\n",
     "\n",
     "\n",
-    "p_enginesize = stats.normaltest(df[[\"Enginesize\"]].values)\n",
+    "k27,p_enginesize = stats.normaltest(df[[\"EngineSize\"]].values)\n",
     "alpha = 1e-3\n",
     "if p_enginesize < alpha:\n",
-    "    print(\"Enginesize is not nomal\")\n",
+    "    print(\"Enginesize is not normal\")\n",
     "else:\n",
     "    print(\"Enginesize is normal\")\n",
     "\n",
     "\n",
-    "p_cylinders = stats.normaltest(df[[\"Cylinders\"]].values)\n",
+    "k28,p_cylinders = stats.normaltest(df[[\"Cylinders\"]].values)\n",
     "alpha = 1e-3\n",
     "if p_cylinders < alpha:\n",
-    "    print(\"Cylinders is not nomal\")\n",
+    "    print(\"Cylinders is not normal\")\n",
     "else:\n",
     "    print(\"Cylinders is normal\")\n",
     "\n",
     "\n",
-    "p_invoice = stats.normaltest(df[[\"Invoice\"]].query(\"Invoice <= 80000\")[\"Invoice\"].values)\n",
+    "k29,p_horsepower = stats.normaltest(df[[\"Horsepower\"]].query(\"Horsepower <= 390\")[\"Horsepower\"].values)\n",
     "alpha = 1e-3\n",
-    "if p < alpha:\n",
-    "    print(\"Invoice is not nomal\")\n",
+    "if p_horsepower < alpha:\n",
+    "    print(\"Horsepower is not normal\")\n",
     "else:\n",
-    "    print(\"Invoice is normal\")\n",
+    "    print(\"Horsepower is normal\")\n",
     "\n",
     "\n",
-    "p_invoice = stats.normaltest(df[[\"Invoice\"]].query(\"Invoice <= 80000\")[\"Invoice\"].values)\n",
+    "k21,p_mpgcity = stats.normaltest(df[[\"MPG_City\"]].query(\"MPG_City <= 40\")[\"MPG_City\"].values)\n",
     "alpha = 1e-3\n",
-    "if p < alpha:\n",
-    "    print(\"Invoice is not nomal\")\n",
+    "if p_mpgcity < alpha:\n",
+    "    print(\"MPG_City is not normal\")\n",
     "else:\n",
-    "    print(\"Invoice is normal\")"
+    "    print(\"MPG_City is normal\")\n",
+    "\n",
+    "\n",
+    "k22,p_mpghighway = stats.normaltest(df[[\"MPG_Highway\"]].query(\"MPG_Highway <= 50\")[\"MPG_Highway\"].values)\n",
+    "alpha = 1e-3\n",
+    "if p_mpghighway < alpha:\n",
+    "    print(\"MPG_Highway is not normal\")\n",
+    "else:\n",
+    "    print(\"MPG_Highway is normal\")\n",
+    "\n",
+    "    \n",
+    "\n",
+    "k23,p_weigth = stats.normaltest(df[[\"Weight\"]].query(\"Weight <= 6200\")[\"Weight\"].values)\n",
+    "alpha = 1e-3\n",
+    "if p_weigth < alpha:\n",
+    "    print(\"Weight is not normal\")\n",
+    "else:\n",
+    "    print(\"Weight is normal\")\n",
+    "\n",
+    "\n",
+    "k24,p_wheelbase = stats.normaltest(df[[\"Wheelbase\"]].query(\"Wheelbase <= 130\")[\"Wheelbase\"].values)\n",
+    "alpha = 1e-3\n",
+    "if p_wheelbase < alpha:\n",
+    "    print(\"Wheelbase is not normal\")\n",
+    "else:\n",
+    "    print(\"Wheelbase is normal\")\n",
+    "\n",
+    "\n",
+    "k25,p_legnth = stats.normaltest(df[[\"Length\"]].query(\"Length <= 240\")[\"Length\"].values)\n",
+    "alpha = 1e-3\n",
+    "if p_legnth < alpha:\n",
+    "    print(\"Length is not normal\")\n",
+    "else:\n",
+    "    print(\"Length is normal\")"
    ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-08-22T05:11:40.865092700Z",
+     "start_time": "2023-08-22T05:11:40.692924800Z"
+    }
+   },
+   "id": "c8d01af59a62faec"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "c8d01af59a62faec"
+   "id": "b0d9d0605b81115a"
   }
  ],
  "metadata": {
