Se guardan las predicciones en las carpetas correspondientes

--- a/Tarea 4/Sonido.ipynb
+++ b/Tarea 4/Sonido.ipynb
@@ -12233,22 +12233,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "example_id = data_test['example_id']\n",
     "df_answer = pd.DataFrame(data= zip(example_id,data_test_predicts),\n",
     "                      columns=[\"example_id\",\"TARGET\"])\n",
-    "df_answer.to_csv(\"data/prediction_sound.csv\", index=False)"
+    "df_answer.to_csv(\"./predictions/sound/prediction_sound_best.csv\", index=False)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T01:44:06.154585145Z",
-     "start_time": "2023-11-01T01:44:06.050282424Z"
+     "end_time": "2023-11-01T01:55:41.125555422Z",
+     "start_time": "2023-11-01T01:55:40.959341980Z"
     }
    },
    "id": "1463e476ea2d00e6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ee67cbcd18712ebc"
   }
  ],
  "metadata": {
