--- a/Tarea 4/Sonido.ipynb
+++ b/Tarea 4/Sonido.ipynb
@@ -11985,8 +11985,7 @@
       "Error: 0.001979672133696642\n",
       "Period: 0.4811018824441268\n",
       "Amplitud: 0.8147087783138713\n",
-      "Constant: 0.16318458725531987\n",
-      "\n"
+      "Constant: 0.16318458725531987\n"
      ]
     }
    ],
@@ -12044,11 +12043,30 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T04:47:41.031280703Z",
      "start_time": "2023-11-01T04:46:47.598260847Z"
     }
    },
    "id": "initial_id"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Vemos que tiene un buen entrenamiento aunque tiene un leve desfase en la parte izquierda de la funcion consenoidal"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "490c84fcc636e6d2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ahora vamos a tomar los ultimos datos guardados de cada una de las variables y vamos a entrenar el modelo"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "66aa990b332d8a"
   },
   {
    "cell_type": "code",
@@ -12065,7 +12083,6 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-01T04:47:41.034682113Z",
      "start_time": "2023-11-01T04:47:41.026690248Z"
     }
    },
@@ -12103,6 +12120,26 @@
    "id": "dd75972eec06d61f"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Escuchar el sonido generado por la onda"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e40fa6658e7f45b2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Para poder escuchar el sonido tenemos que alargar la onda, ya que originalmente está en un intervalo de tiempo muy pequeño"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d7582f5508e3299c"
+  },
+  {
    "cell_type": "code",
    "execution_count": 230,
    "outputs": [],
@@ -12121,6 +12158,16 @@
    "id": "cfa4fba9d3f2f7b6"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Luego Guardamos el archivo generado"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b23ab663072a0f3d"
+  },
+  {
    "cell_type": "code",
    "execution_count": 231,
    "outputs": [],
@@ -12137,6 +12184,18 @@
     }
    },
    "id": "aa0302dd18438906"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Entramiento con variables de Test\n",
+    "\n",
+    "Vamos ahora a agarrar los datos de test para realizar las predicciones"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7b5d5d89ddd6ef32"
   },
   {
    "cell_type": "code",
@@ -12190,6 +12249,16 @@
    "id": "af9f2e4d5dc2e562"
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Vemos que la onda de entrenamiento y la onda de test se unen"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "732fc205ae59c723"
+  },
+  {
    "cell_type": "code",
    "execution_count": 234,
    "outputs": [
@@ -12219,6 +12288,26 @@
     }
    },
    "id": "f13ad62c56051b01"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Por último vemos como se comporto el error en el entrenamiento a lo largo del tiempo, y sé cómo se disminuye considerablemente"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c77540f415a065c2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ahora se guardan los datos con las predicciones en un archivo tipo csv"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "178126a4be0d2538"
   },
   {
    "cell_type": "code",
